etc/tests/fuzz/errors/type/call-arg-mismatch.nshape
shape type-call-arg-mismatch {
  family "compiler-errors/type"
  generator "error"
  features ["error", "type", "negative", "diagnostic"]
  template ny-compile-fail
  expect compile_fail

  expect_message "cannot assign string literal to int"
  source ny <<'NY'
use std.core

fn need(int x) int {
   x
}

print(need("x"))
NY
}
